# elastomeros_ecuatorianos

./: .gitignore  README.md  pyproject.toml  script.sh
apps/cart/: cart.py  forms.py  urls.py  views.py
apps/core/: choices.py  fields.py  viewmixins.py
apps/core/management/commands/: update_default_domain_name.py  update_default_site_object.py  update_site_domain_and_name.py
apps/core/templatetags/: core_tags.py
apps/home/: config.py  urls.py
apps/products/: admin.py  config.py  constants.py  context_processors.py  filters.py  managers.py  models.py  schemas.py  signals.py  urls.py  utils.py  views.py
apps/products/management/commands/: create_attributes.py  create_categories.py  create_product_attribute_values.py  create_product_attributes.py  create_product_categories.py  create_products.py  create_test_products.py  seed_sample_products.py
apps/products/migrations/: 0001_initial.py
apps/products/tests/: factories.py  test_managers.py  test_models.py  test_signals.py  test_utils.py
apps/shop/: config.py  urls.py  views.py
apps/store/: config.py  urls.py  views.py
apps/users/: admin.py  forms.py  forms_admin.py  forms_allauth.py  managers.py  models.py  signals.py  utils.py
apps/users/management/commands/: create_test_superusers.py  create_test_users.py  seed_sample_users.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_models.py  test_signals.py
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
static/assets/css/: theme.css  theme.css.map
static/assets/js/: theme-switcher.js  theme.js  theme.js.map  theme.min.js  theme.min.js.map
static/css/: project.css  project.min.css
static/js/: project.js  project.min.js
templates/: 403.html  403_csrf.html  404.html  500.html  base.html
templates/account/: _base.html  account_inactive.html  confirm_login_code.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  request_login_code.html  signup.html  signup_closed.html  verification_sent.html
templates/components/products/: product_card.html
templates/home/: index.html
templates/includes/: footer.html  header.html  messages.html
templates/partials/: extras.html  footer.html  header.html  messages.html  scripts.html  styles.html
templates/products/: product_detail.html  product_list.html
templates/shop/: index.html
templates/store/: home.html
